Fixed minor bugs that threw errors at validation

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-SE">
 	<head>
 		<meta charset="UTF-8">
 		<title>Kontakt | Prima Paraplyer</title>
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="img/barably.png" style="width: 175px; height: 175px;">
+			<img src="img/barably.png"  alt="Prima Paraplyers logga" style="width: 175px; height: 175px;">
 			<h1>Prima Paraplyer UF</h1>
 		</header>
         <hr>
