--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-SE">
 	<head>
 		<meta charset="UTF-8">
 		<title>Prima Paraplyer</title>
@@ -13,7 +13,7 @@
 
     <div class="container">
     <header>
-		<img src="img/barably.png" style="width: 175px; height: 175px;">
+		<img src="img/barably.png" alt="Prima Paraplyers logga" style="width: 175px; height: 175px;">
 		<h1>Prima Paraplyer UF</h1>
     </header>
  
@@ -31,21 +31,21 @@
 		<h2>Våra paraplyer</h2>
 		
 		<div class="product" id="Information">
-			<a name="Information"/>
+			<a name="Information"></a>
 			<h3>Information</h3>
 			<!--img src="img/gaffel.jpg" alt="En gaffel" class="productImage"-->
 			<p>Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply.</p>
 		</div>
 		
 		<div class="product" id="Tillverkning">
-			<a name="Tillverkning"/>
+			<a name="Tillverkning"></a>
 			<h3>Tillverkning</h3>
 			<!--img src="img/kniv.jpg" alt="En kniv" class="productImage"-->
 			<p>Plats för framtida produkter. För närvarande inget. Vårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första ochoch ända paraplyVårt första och ända paraplyVårt första och ända paraply</p>
 		</div>
 		
 		<div class="product" id="Materialet">
-			<a name="Materialet"/>
+			<a name="Materialet"></a>
 			<h3>Materialet</h3>
 			<!--img src="img/sked.jpg" alt="En sked" class="productImage"-->
 			<p>Plats för framtida produkter. För närvarande inget. Vårt första och panikens mamma. Årt första och ända pa raplyVårt första och ända paraply Vårt första och ända paraplyVårt första och ända pa...raply</p>
